# IntelRackScaleArchitecture

./: README.md
RSA-SW/PSME/: CMakeLists.txt  LICENSE  NOTICE  setenv.sh
RSA-SW/PSME/agent-intel/: CMakeLists.txt
RSA-SW/PSME/agent-intel/compute/: CMakeLists.txt  bdc_r_configuration.json  configuration.json  configuration_schema.json  doxygen-dev.config  doxygen.config  make_builds.sh
RSA-SW/PSME/agent-intel/compute/examples/: CMakeLists.txt
RSA-SW/PSME/agent-intel/compute/src/: CMakeLists.txt  default_configuration.hpp  main.cpp
RSA-SW/PSME/agent-stubs/: CMakeLists.txt
RSA-SW/PSME/agent-stubs/compute/: CMakeLists.txt  clean_builds.sh  configuration.json
RSA-SW/PSME/agent-stubs/compute/examples/: CMakeLists.txt
RSA-SW/PSME/agent-stubs/compute/src/: CMakeLists.txt  default_configuration.hpp  main.cpp
RSA-SW/PSME/agent-stubs/network/: CMakeLists.txt  configuration.json  configuration_schema.json
RSA-SW/PSME/agent-stubs/network/src/: CMakeLists.txt  default_configuration.hpp  main.cpp
RSA-SW/PSME/agent/network/: CMakeLists.txt  bdc_r_configuration.json  configuration.json  configuration_schema.json  make_builds64.sh
RSA-SW/PSME/agent/network/config/: network_config.hpp.in
RSA-SW/PSME/agent/network/src/: CMakeLists.txt  default_configuration.hpp  main.cpp
RSA-SW/PSME/agent/network/tests/: CMakeLists.txt
RSA-SW/PSME/agent/storage/: CMakeLists.txt  configuration.json  configuration_schema.json  doxygen-dev.config  doxygen.config
RSA-SW/PSME/agent/storage/config/: storage_config.hpp.in
RSA-SW/PSME/agent/storage/examples/: CMakeLists.txt
RSA-SW/PSME/agent/storage/src/: CMakeLists.txt  default_configuration.hpp  main.cpp  storage_config.hpp
RSA-SW/PSME/application/: CMakeLists.txt  configuration.json  configuration_schema.json  doxygen-dev.config  doxygen.config
RSA-SW/PSME/application/config/: psme-storage-service-configuration.json  version.hpp.in
RSA-SW/PSME/application/examples/: CMakeLists.txt
RSA-SW/PSME/application/include/: version.hpp
RSA-SW/PSME/application/src/: CMakeLists.txt  default_configuration.hpp  logger_ext.cpp  logger_ext.hpp  logger_loader.cpp  logger_loader.hpp  main.cpp  signal.cpp  signal.hpp  version.cpp
RSA-SW/PSME/application/src/command/: CMakeLists.txt  command.cpp  command.hpp  command_exception.cpp  command_exception.hpp  command_json.cpp  command_json.hpp  command_json_server.cpp  command_json_server.hpp
RSA-SW/PSME/application/src/core/: CMakeLists.txt
RSA-SW/PSME/application/src/eventing/: CMakeLists.txt  event_producer.cpp  event_producer.hpp  event_queue.hpp  eventing_data_queue.cpp  eventing_data_queue.hpp  eventing_http_server.cpp  eventing_http_server.hpp  eventing_server.cpp  eventing_server.hpp
RSA-SW/PSME/application/src/registration/: CMakeLists.txt  registration_server.cpp  registration_server.hpp
RSA-SW/PSME/application/src/rest/: CMakeLists.txt
RSA-SW/PSME/application/src/utils/: CMakeLists.txt  network_interface_info.cpp
RSA-SW/PSME/application/tests/: CMakeLists.txt  psme-rest-server_load.jmx
RSA-SW/PSME/cmake/: AddCPack.cmake  AddClangCompiler.cmake  AddCodeCoverage.cmake  AddDiagnostics.cmake  AddDocumentation.cmake  AddGnuCompiler.cmake  Application.cmake  ConfigurationPackage.cmake  FindAgentFramework.cmake  FindConfiguration.cmake  FindCurl.cmake  FindGoogleTest.cmake  FindIES.cmake  FindJsonCpp.cmake  FindJsonCxx.cmake  FindJsonRpcCpp.cmake  FindLogger.cmake  FindLvm2App.cmake  FindMicrohttpd.cmake  FindNL3.cmake  FindNcurses.cmake  FindOpenIPMI.cmake  FindPCA95xx.cmake  FindPopt.cmake  FindSafeString.cmake  FindSysfs.cmake  FindUDEV.cmake  FindUUID.cmake  FindValgrindCxx.cmake  InstallAgentFramework.cmake  InstallConfiguration.cmake  InstallCurl.cmake  InstallGoogleMock.cmake  InstallGoogleTest.cmake  InstallIES.cmake  InstallJsonCpp.cmake  InstallJsonCxx.cmake  InstallJsonRpcCpp.cmake  InstallLogger.cmake  InstallLvm2App.cmake  (+9 more)
RSA-SW/PSME/cmake/Platform/: Linux-buildroot-arm.cmake  Linux-gcc-arm.cmake
RSA-SW/PSME/common/agent-framework/: CMakeLists.txt  README.md  Version.cmake  doxygen-dev.config  doxygen.config
RSA-SW/PSME/common/agent-framework/config/: version.hpp.in
RSA-SW/PSME/common/agent-framework/examples/: CMakeLists.txt
RSA-SW/PSME/common/agent-framework/src/: CMakeLists.txt  logger_ext.cpp  logger_loader.cpp  message.hpp  signal.cpp  version.cpp
RSA-SW/PSME/common/agent-framework/tests/: CMakeLists.txt
RSA-SW/PSME/common/configuration/: CMakeLists.txt
RSA-SW/PSME/common/configuration/src/: CMakeLists.txt  configuration.cpp  json_path.cpp  schema_errors.cpp  schema_property.cpp  schema_reader.cpp  schema_validator.cpp  utils.cpp
RSA-SW/PSME/common/gmock/: CMakeLists.txt
RSA-SW/PSME/common/gtest/: CMakeLists.txt
RSA-SW/PSME/common/gtest/config/: AddClangCompiler.cmake  AddGnuCompiler.cmake
RSA-SW/PSME/common/json-cxx/: CMakeLists.txt
RSA-SW/PSME/common/json-cxx/examples/: example.cpp
RSA-SW/PSME/common/json-cxx/src/: iterator.cpp  value.cpp
RSA-SW/PSME/common/json-cxx/tests/: CMakeLists.txt
RSA-SW/PSME/common/logger/: CMakeLists.txt  LICENSE.md
RSA-SW/PSME/common/logger/examples/: CMakeLists.txt  logger_example_buffer.c  logger_example_cpp.cpp  logger_example_stdout.c  logger_example_streams.c  logger_example_tcp_receiving.py  logger_example_udp_receiving.c  logger_example_udp_receiving.py
RSA-SW/PSME/common/logger/src/: logger.c  logger.cpp  logger_alloc.c  logger_alloc.h  logger_assert.h  logger_buffer.c  logger_color.c  logger_color.h  logger_factory.cpp  logger_level.c  logger_level.h  logger_list.c  (+9 more)
RSA-SW/PSME/common/pca95xx/: CMakeLists.txt  README.md
RSA-SW/PSME/common/safe-string/: CMakeLists.txt
RSA-SW/PSME/common/valgrind-cxx/: CMakeLists.txt  README.md
RSA-SW/PSME/encrypter/: CMakeLists.txt
RSA-SW/PSME/encrypter/src/: CMakeLists.txt  main.cpp
RSA-SW/RMM/: CMakeLists.txt
RSA-SW/RMM/src/lib/: CMakeLists.txt
RSA-SW/RMM/src/module/: CMakeLists.txt
RSA-SW/RMM/utils/: rmm_release.sh
RSA-SW/RMM/utils/cfg/: rmm.cfg
RSA-SW/RMM/utils/encrypt_text/: Makefile  main.c
RSA-SW/RMM/utils/redfish/: MR.json
(+1909 files in other folders)
