SET(TARGET_UPGRADED  upgraded)

SET(SRC_APP main.c)

SET(TARGET_CM_RESET  cm_reset)

SET(CM_RESET_APP cm_reset.c)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/include)

ADD_EXECUTABLE(${TARGET_UPGRADED} ${SRC_APP})
TARGET_LINK_LIBRARIES(${TARGET_UPGRADED} libutils.a liblog.so librmmcfg.so libjson.so libcurl.so)

ADD_EXECUTABLE(${TARGET_CM_RESET} ${CM_RESET_APP})
TARGET_LINK_LIBRARIES(${TARGET_UPGRADED})