SET(TARGET_LIB log)

SET(SRC_LIB rmmlog.c)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)

INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/include)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/include)

ADD_LIBRARY(${TARGET_LIB} SHARED ${SRC_LIB})
ADD_DEPENDENCIES(${TARGET_LIB} utils rmmcfg)

TARGET_LINK_LIBRARIES(${TARGET_LIB} libutils.so librmmcfg.so -lm)
