SET(TARGET utils)
SET(TARGET_STATIC utils_s)

AUX_SOURCE_DIRECTORY(. SRC_LIST)
#SET(CMAKE_C_FLAGS "-g -Wno-unused-variable -Wall -Werror")
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/include)
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/include)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)
ADD_LIBRARY(${TARGET} SHARED ${SRC_LIST})
ADD_LIBRARY(${TARGET_STATIC} STATIC ${SRC_LIST})
ADD_DEPENDENCIES(${TARGET} liblog openssl)

SET_TARGET_PROPERTIES(${TARGET_STATIC} PROPERTIES OUTPUT_NAME ${TARGET})

ADD_DEPENDENCIES(${TARGET} json liblog openssl libcurl)
TARGET_LINK_LIBRARIES(${TARGET} libpthread.so libssl.so libcrypto.so libcurl.so  -lrt)
