SET(TARGET_LIB wrap)

SET(SRC_LIB wrap.c am_api.c)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)

INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/include)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/include)

ADD_LIBRARY(${TARGET_LIB} SHARED ${SRC_LIB})

ADD_DEPENDENCIES(${TARGET_LIB} memdb)
ADD_DEPENDENCIES(${TARGET_LIB} ipmi)
TARGET_LINK_LIBRARIES(${TARGET_LIB} libjsonrpcapi.so librmmcfg.so libpthread.so -lm)
